# Serial-Port-Debugger

./: .gitignore  Cargo.toml  build.rs
.trae/skills/gitee-connector/: SKILL.md
AT固件程序/: esp8266.c  esp8266.h
src/: cloud.rs  config.rs  dataflow.rs  main.rs  serial.rs  ui.rs  update.rs  utils.rs
专有固件程序/: esp8266.c  esp8266.h
